--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "lastoftype-boilerplate",
   "version": "0.1.0",
   "dependencies": {
-    "bootstrap-sass": "~3.3.3"
+    "bootstrap-sass": "~3.3.3",
+    "react": "~0.13.3"
   }
 }
