--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
+    "gulp-babel": "^5.1.0",
     "gulp-changed": "^1.2.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
@@ -15,6 +16,7 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
-    "gulp-watch": "^4.2.2"
+    "gulp-watch": "^4.2.2",
+    "wiredep": "^2.2.2"
   }
 }
